--- a/ESD/SpringBoot/ESDFirstApp/src/main/resources/application.properties
+++ b/ESD/SpringBoot/ESDFirstApp/src/main/resources/application.properties
@@ -1,1 +1,15 @@
 spring.application.name=ESDFirstApp
+server.port=8080
+
+# Spring data Config
+spring.datasource.url=jdbc:mysql://localhost:3306/ESDFirstApp?createDatabaseIfNotExist=true
+spring.datasource.username=parv
+spring.datasource.password=Parv@2002
+
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.generate-ddl=true
+
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
